# fe

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  Cargo.toml  IMPORTANT_READ_THIS_FIRST_BRIEFING.md  KNOWN_ISSUES.md  Makefile  PR_DESCRIPTION.md  README.md  REFACTOR_ACTION_PLAN.md  debug_identity.rs  debug_local.fe  fe.toml  iffy-transcription-of-fe-meeting-oct-21.srt  index.html  oct-29-review-summary.md  phantom_example.fe  prereview-study-ahead-of-oct-29-review.md  rewrite-messages.sh  transcription-of-oct-29-review-corrected.txt  {%.new}
crates/codegen/: Cargo.toml
crates/codegen/src/: analyze.rs  backend.rs  datalog.rs  debug_explorer.rs  dispatch.rs  dwarf.rs  ethdebug.rs  function_symbols.rs  lib.rs  security.rs  trace.rs
crates/codegen/src/sonatina/: lower.rs  lower_runtime.rs  mod.rs  tests.rs
crates/codegen/src/yul/: emitter.rs  mod.rs
crates/codegen/tests/: compiler_verification.rs  hash_properties.rs  native_backend.rs  runtime_handle_preservation.rs  security_queries.rs  sonatina_ir.rs  test_helpers.rs  test_yul_tests.rs
crates/codegen/tests/fixtures/: alloc.snap  alloc_self_assign.snap  arg_bindings.snap  array_literal.snap  array_mut.snap  aug_assign.snap  aug_assign_bit_ops.snap  bit_ops.snap  borrow_handles_readback.snap  borrow_storage_field_handle.snap  by_ref_trait_provider_storage_bug.snap  cast_u8_usize_cmp.snap  code_region.fe  code_region.snap  code_region_qualified.fe  code_region_qualified.snap  comparison_ops.snap  const_array.snap  const_array_add.snap  const_array_addmod.snap  const_array_branch.snap  const_array_loop.snap  const_fn_packed_config.snap  const_nested_u8_array.snap  create_contract.desugared.snap  create_contract.snap  effect_handle_field_deref.snap  effect_ptr_calldata_domain.fe  effect_ptr_calldata_domain.snap  effect_ptr_domains.fe  effect_ptr_domains.snap  enum_variant_contract.fe  enum_variant_contract.snap  erc20.desugared.snap  erc20.fe  erc20.snap  erc20_low_level.fe  erc20_low_level.snap  event_logging.fe  event_logging.snap  (+85 more)
crates/doc-engine/: Cargo.toml
crates/doc-engine/assets/: docs.css
crates/doc-engine/src/: extract.rs  lib.rs  model.rs  render.rs  server.rs
crates/doc-engine/src/render/: components.rs  markdown.rs
crates/doc-engine/tests/: extract.rs
crates/doc-engine/tests/fixtures/: enum_with_variants.snap  function_docs.snap  module_tree.snap  simple_struct.snap  trait_and_impl.snap
crates/doc-viewer/: Cargo.toml
crates/doc-viewer/src/: components.rs  lib.rs  markdown.rs  model.rs  scripts.js  server.rs  ssr_components.rs  styles.css
crates/fe/: Cargo.toml  build.rs
crates/fe-web/: Cargo.toml  build.rs
crates/fe-web/assets/: fe-code-block.js  fe-debug-explorer.js  fe-doc-item.js  fe-doc-viewer.js  fe-highlight.css  fe-highlighter.js  fe-origin-trace.js  fe-scip-store.js  fe-search.js  fe-signature.js  fe-web.js  styles.css
crates/fe-web/examples/: debug-explorer.html
crates/fe-web/src/: assets.rs  escape.rs  highlight.rs  lib.rs  markdown.rs  model.rs  starlight.rs  static_site.rs  wasm.rs
crates/fe-web/src/snapshots/: fe_web__model__tests__doc_index_schema.snap
crates/fe/src/: abi.rs  analyze.rs  bench.rs  bench_support.rs  build.rs  check.rs  debug_cli.rs  dependency_diagnostics.rs  doc.rs  doc_serve.rs  extract.rs  highlight_cmd.rs  index_util.rs  lib.rs  lsif.rs  main.rs  metadata_input.rs  scip_index.rs  semantic_index_builder.rs  shape_cli.rs  test.rs  trace.rs  tree.rs  workspace_ingot.rs
crates/fe/src/cli/: new.rs
crates/fe/src/test/: gas.rs  mod.rs
crates/fe/src/trace/: trace_cli.rs  trace_datalog.rs  trace_emit.rs  trace_render.rs  trace_web_demo.rs
crates/fe/tests/: build_foundry.rs  cli_new.rs  cli_output.rs  crash_regressions.rs  differential_deposit.rs  event_dynamic.rs
crates/fe/tests/differential_deposit/: gas_report.snap
crates/fe/tests/doc_fixtures/: enum_with_variants.snap  function_docs.snap  module_tree.snap  simple_struct.snap  trait_and_impl.snap
crates/semantic-indexing/: Cargo.toml
crates/semantic-indexing/src/: doc.rs  extract.rs  index.rs  index_util.rs  lib.rs  lsif.rs  populate.rs  scip.rs  scip_batch.rs
crates/semantic-query/: Cargo.toml
crates/semantic-query/src/: anchor.rs  goto.rs  hover.rs  identity.rs  lib.rs  refs.rs  util.rs
crates/semantic-query/test-fixtures/: local_param_boundary.fe  shadow_local.fe
crates/semantic-query/test_files/: ambiguous_last_segment.fe  ambiguous_last_segment.snap  ambiguous_methods.fe  ambiguous_methods.snap  enum_variants.snap  fields.snap  leftmost_and_use.snap  locals.snap  methods_call.fe  methods_call.snap  methods_ufcs.snap  pattern_labels.fe  pattern_labels.snap  use_alias_and_glob.fe  use_alias_and_glob.snap  use_braces.fe  use_braces.snap  use_paths.snap
crates/semantic-query/test_files/goto/: ambiguous_last_segment.fe  ambiguous_last_segment.snap  enum_variants.fe  enum_variants.snap  fields.fe  fields.snap  leftmost_and_use.snap  locals.fe  locals.snap  methods_call.snap  methods_ufcs.fe  methods_ufcs.snap  pattern_labels.snap  refs_ambiguous_last_segment.snap  refs_enum_variants.snap  refs_fields.snap  refs_leftmost_and_use.snap  refs_locals.snap  refs_methods_call.snap  refs_methods_ufcs.snap  refs_pattern_labels.snap  refs_use_alias_and_glob.snap  refs_use_paths.snap  use_alias_and_glob.snap  use_paths.fe  use_paths.snap
crates/semantic-query/tests/: boundary_cases.rs  goto_snap.rs  refs_def_site.rs  refs_snap.rs  support.rs  symbol_keys_snap.rs
crates/shape-address-macros/: Cargo.toml
crates/shape-address-macros/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs  snap.rs
crates/trace-facts-macros/: Cargo.toml
crates/trace-facts-macros/src/: lib.rs
crates/uitest/: Cargo.toml
crates/uitest/fixtures/mir_check/: borrowck_call_nested_handle_arg_overlap.fe  borrowck_call_nested_handle_arg_overlap.snap  borrowck_call_result_aggregate_handle_then_write.fe  borrowck_call_result_aggregate_handle_then_write.snap  borrowck_call_result_then_write.fe  borrowck_call_result_then_write.snap  (+56 more)
crates/uitest/tests/: ty_check.rs
(+2394 files in other folders)
