[package]
name = "fe-codegen"
version = "26.1.0"
edition.workspace = true

[dependencies]
driver = { path = "../driver", package = "fe-driver" }
mir = { path = "../mir", package = "fe-mir" }
hir.workspace = true
common.workspace = true
hex = "0.4"
num-bigint.workspace = true
rustc-hash.workspace = true
sonatina-ir.workspace = true
sonatina-triple.workspace = true
sonatina-codegen.workspace = true
sonatina-verifier.workspace = true
smallvec.workspace = true
smallvec1.workspace = true
tracing.workspace = true
gimli.workspace = true
object.workspace = true
cozo = { version = "0.7.6", default-features = false, features = ["storage-sqlite", "storage-sqlite-src", "rayon"], optional = true }
url.workspace = true

[features]
default = []
datalog = ["dep:cozo"]

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
hir = { workspace = true, features = ["testutils"] }
