[package]
name = "fe-doc-engine"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Documentation engine for Fe lang - extraction, rendering, and serving"

[features]
default = []
# Server-side rendering with axum
ssr = ["dep:axum", "dep:tower", "dep:tower-http", "dep:tokio", "dep:tokio-stream", "dep:tracing", "dep:futures-util"]

[dependencies]
# Fe crates
common.workspace = true
driver.workspace = true
hir.workspace = true
parser.workspace = true

# Core dependencies
salsa.workspace = true
rustc-hash.workspace = true
camino.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Leptos for reactive UI (we'll use CSR mode for now)
leptos = { version = "0.7" }

# Markdown processing
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Server (optional, for ssr)
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio = { version = "1.43", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tracing = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }

[dev-dependencies]
test-utils.workspace = true
