[package]
name = "fe-doc-engine"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Documentation extraction from Fe HIR - produces DocIndex for doc-viewer"

[dependencies]
# Fe crates
common.workspace = true
driver.workspace = true
hir.workspace = true
parser.workspace = true

# Doc viewer (for model types)
doc-viewer = { path = "../doc-viewer", package = "fe-doc-viewer" }

# Core dependencies
salsa.workspace = true
rustc-hash.workspace = true
camino.workspace = true

[dev-dependencies]
test-utils.workspace = true
