[package]
name = "fe-doc-viewer"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Documentation viewer UI for Fe lang - SSR Leptos components"

[lib]
crate-type = ["rlib"]

[features]
default = []
# Server-side rendering (pure SSR, live updates via scripts.js)
ssr = ["leptos/ssr", "dep:axum", "dep:tower", "dep:tower-http", "dep:tokio", "dep:tracing"]

[dependencies]
# Leptos for reactive UI (SSR only)
leptos = { version = "0.7" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Markdown processing
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Server support (optional, for ssr feature)
axum = { version = "0.8", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
tokio = { version = "1.43", features = ["full"], optional = true }
tracing = { workspace = true, optional = true }
