[package]
name = "fe-web"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Fe documentation model types and web components"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-fe = { path = "../tree-sitter-fe" }

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
wasm-bindgen-test.workspace = true
