[package]
name = "fe"
version = "0.26.0"
edition.workspace = true

[dependencies]
clap.workspace = true
driver.workspace = true
tracing.workspace = true
common.workspace = true
resolver.workspace = true
camino.workspace = true
petgraph.workspace = true
url.workspace = true
smol_str.workspace = true
hir.workspace = true
mir.workspace = true
cranelift-entity.workspace = true
codegen = { path = "../codegen", package = "fe-codegen" }
# doc-engine for extraction only
doc-engine = { path = "../doc-engine", package = "fe-doc-engine" }
# doc-viewer for server and model
doc-viewer = { path = "../doc-viewer", package = "fe-doc-viewer", features = ["ssr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
fmt.workspace = true
walkdir = "2"
similar = "2"
colored = "2"

[dev-dependencies]
dir-test.workspace = true
test-utils.workspace = true
