[package]
name = "fe-semantic-query"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "High-level semantic query orchestration for Fe"

[lib]
doctest = false

[dependencies]
common.workspace = true
parser.workspace = true
hir.workspace = true
hir-analysis.workspace = true
salsa.workspace = true
tracing.workspace = true
url.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
async-lsp = { git = "https://github.com/micahscopes/async-lsp", branch = "pub-inner-type-id" }
driver.workspace = true
dir-test.workspace = true
test-utils.workspace = true
