[package]
name = "fe-test-utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ethereum/fe"
description = "Fe test utilities"

[lib]
doctest = false

[dependencies]
insta = "1.34.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-tree = "0.3.0"
hir = { workspace = true }
parser = { workspace = true }
url = { workspace = true }
