[package]
name = "fe-trace-facts-macros"
version = "26.1.0"
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/argotorg/fe"
description = "Derive macros for Fe trace fact schema projections."

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "3.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
